SFix small Layout bug that removed the upper corner of the scrollbar

--- a/src/app/pages/documentation-page/documentation-page.component.scss
+++ b/src/app/pages/documentation-page/documentation-page.component.scss
@@ -12,3 +12,7 @@ a[id^=documentation-] {
     text-align: center;
     padding: 20px 0;
 }
+
+.navbar {
+    margin: 0 20px; // to make scrollbar right visible
+}
